--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -36,8 +36,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Prepare
-      - name: Checkout source code
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Checkout BunkerWeb repository
+        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+        with:
+          repository: bunkerity/bunkerweb
+          ref: ${{ inputs.RELEASE }}
       - name: Replace VERSION
         if: inputs.RELEASE == 'testing' || inputs.RELEASE == 'dev' || inputs.RELEASE == 'ui' || inputs.RELEASE == 'v2'
         run: ./misc/update-version.sh ${{ inputs.RELEASE }}
